2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): Do not use pk-term.
	(pk_print_version): Likewise.
	(parse_args_2): Likewise.
	(pk_fatal): Likewise.
	(parse_args_1): Handle HELP_ARG and VERSION_ARG here.
	(parse_args_2): ... instead of here.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* gui/: Remove.
	* bootstrap.conf (gui_modules): Remove.
	(bootstrap_post_import_hook): Do not create gl-guil.
	(ACLOCAL_FLAGS): Do not include m4/gui.
	* configure.ac: Do not call gui_EARLY.
	Do not call gui_INIT.
	Remove Tcl/Tk checks.
	* run.in: Do not set gui-related paths.
	* DEPENDENCIES: Remove section on Tcl and Tk.
	* .gitignore: Remove gui-related entries.
	* Makefile.am (ACLOCAL_AMFLAGS): Do not include m4/gui.
	(SUBDIRS): Remove gui and gl-gui directories.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_type_name.
	* libpoke/pk-val.c (pk_type_name): New function.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk: Do not capitalize summary in help entry.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-attrs.def: Remove PKL_AST_ATTR_ALIGNMENT.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Do not handle the
	'alignment attribute.
	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Likewise.
	* testsuite/poke.repl/repl.exp: Update tests.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Emit
	compilation-time errors for some attributes.
	* testsuite/poke.pkl/attr-offset-diag-4.pk: New test.
	* testsuite/poke.pkl/attr-ename-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-esize-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-eoffset-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-ename-arr-5.pk: Remove test.
	* testsuite/poke.pkl/attr-esize-5.pk: Likewise.
	* testsuite/poke.pkl/attr-eoffset-5.pk: Likewise.
